# dynlog

./: Cargo.toml  README.md
src/: core.rs  level.rs  lib.rs  main.rs  timestamp.rs
src/trigger/: file.rs  mod.rs  socket.rs
